    Their old contents have been moved to the 'backzone' file.
    The affected zones are: Africa/Blantyre, Africa/Bujumbura,
    Africa/Gaborone, Africa/Harare, Africa/Kigali, Africa/Lubumbashi,
    Africa/Lusaka, Africa/Maseru, and Africa/Mbabane.

  Changes affecting code

    The tz library's localtime and mktime functions now set tzname to a value
    appropriate for the requested time stamp, fixing a 2014g regression.
    (Thanks to Tim Parenti for reporting the problem.)

    zdump -c no longer mishandles transitions near year boundaries.
    (Thanks to Tim Parenti for reporting the problem.)

    An access to uninitalized data has been fixed.
    (Thanks to Jörg Richter for reporting the problem.)

  Changes affecting build procedure

    'make check' now checks better for properly-sorted data.

  Changes affecting documentation and commentary

    zdump -c's treatment of years is now documented to use the
    Gregorian calendar and Universal Time without leap seconds,
    and its behavior at cutoff boundaries is now documented better.
    (Thanks to Arthur David Olson and Tim Parenti for reporting the problems.)

    Fractional-second GMT offsets have been documented for civil time
    in 19th-century Chennai, Jakarta, and New York.


Release 2014g - 2014-08-28 12:31:23 -0700

  Changes affecting future time stamps

    Turks & Caicos is switching from US eastern time to UTC-4 year-round,
    modeled as a switch from EST/EDT to AST on 2014-11-02 at 02:00.

  Changes affecting past time stamps

    Time in Russia or the USSR before 1926 or so has been corrected by
    a few seconds in the following zones: Asia/Irkutsk,
    Asia/Krasnoyarsk, Asia/Omsk, Asia/Samarkand, Asia/Tbilisi,
    Asia/Vladivostok, Asia/Yakutsk, Europe/Riga, Europe/Samara.  For
    Asia/Yekaterinburg the correction is a few minutes.  (Thanks to
    Vladimir Karpinsky.)

    The Portuguese decree of 1911-05-26 took effect on 1912-01-01.