@@ -18,7 +18,8 @@ Unreleased, experimental changes
   Changes affecting code
 
     The tz library's localtime and mktime functions now set tzname to a value
-    appropriate for the requested time stamp, fixing a 2014g regression.
+    appropriate for the requested time stamp, and zdump now uses this
+    on platforms not defining TM_ZONE, fixing a 2014g regression.
     (Thanks to Tim Parenti for reporting the problem.)
 
     zdump -c no longer mishandles transitions near year boundaries.
